# wsebr

./: .gitignore  Cargo.toml  Dockerfile  LICENSE.md  Makefile  README.md
.github/workflows/: docker-publish.yml
assets/: style.css
docker/etc/periodic/daily/: wsebr-crawler
docker/etc/s6-overlay/s6-rc.d/init-adduser/: branding
docker/etc/s6-overlay/s6-rc.d/svc-wsebrd/: run
src/: lib.rs
src/wsebr/: main.rs
src/wsebr-crawler/: main.rs
src/wsebrd/: main.rs
templates/: about.html  footer.html  home.html  latest.html  pages.html  result_list.html  robots.txt  search.html
